# platform-problem-monitoring-core

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTES.md  README.md  REQUIREMENTS.md  pyproject.toml  run.sh
.github/workflows/: code-quality.yml  release.yml  tests.yml
assets/sample-trend-and-report-input-data/: comparison_results.json  email_body.html  email_body.txt  hourly_problem_numbers.json  lucene_query.json  norm_results.json
conf/: platform_problem_monitoring_core.conf.dist
docs/: JETBRAINS_SETUP.md  NOTES.md  QUALITY.md  RELEASE_MANAGEMENT.md  REQUIREMENTS.md
etc/: high_priority_messages.txt.dist  lucene_query.json.dist  main.conf.dist
references/: janus-webui.css  janus_living_styleguide.html.twig  janus_tailwind.config.js  poc_summarize_logstash_messages.py.erb
references/sample_data/: comparison_results.json  normalization_results.json
sample-trend-and-report-input-data/: norm_results_prev.json  start_date_time.txt
src/: platform_problem_monitoring_core.conf.dist  run.sh
src/platform_problem_monitoring_core/: __init__.py  send_error_email.py  step10_cleanup.py  step10_send_email_report.py  step11_store_new_state.py  step12_cleanup.py  step1_prepare.py  step2_download_previous_state.py  step3_download_logstash_documents.py  step3_retrieve_hourly_problem_numbers.py  step4_extract_fields.py  step4_generate_trend_chart.py  step4a_check_high_priority_alerts.py  step5_download_logstash_documents.py  step5_normalize_messages.py  step6_compare_normalizations.py  step6_extract_fields.py  step7_generate_email_bodies.py  step8_compare_normalizations.py  step8_send_email_report.py  step9_generate_email_bodies.py  step9_generate_email_bodies.py.bak  step9_store_new_state.py  utils.py
src/platform_problem_monitoring_core/resources/: html_email_template.html
src/tests/: __init__.py  test_step4_extract_fields.py  test_step4a_check_high_priority_alerts.py  test_step5_normalize_messages.py  test_step6_compare_normalizations.py  test_step6_extract_fields.py  test_step7_generate_email_bodies.py  test_step7_normalize_messages.py  test_step8_compare_normalizations.py  test_step9_generate_email_bodies.py
src/tests/fixtures/: __init__.py  comparison_results.json  current_date_time.txt  current_normalization_results.json  extracted_fields.jsonl  logstash_documents.json  previous_normalization_results.json
