[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform_problem_monitoring_core"
version = "0.1.0"
description = "A tool for monitoring platform problems using Elasticsearch logs"
authors = [
    {name = "Platform Team"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
dependencies = [
    "boto3>=1.28.0",
    "drain3>=0.9.6",
    "jinja2>=3.0.0",
    "argparse>=1.4.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["platform_problem_monitoring_core"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
